--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "3.13.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-bits": "1.0.5",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
