--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "2.3.4",
     "gsap": "3.13.0",
     "react": "^19.2.0",
     "react-bits": "1.0.5",
