--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.2.0",
     "react-bits": "1.0.5",
     "react-dom": "^19.2.0",
-    "react-router-dom": "7.9.6"
+    "react-router-dom": "7.9.6",
+    "tailwindcss-text-stroke": "0.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
